[package]
name = "liblambdashell"
version = "0.1.0"
edition = "2021"

[dependencies]
color-print = "0.3.7"
const_format = "0.2.33"
crossterm = "0.28.1"
home = "0.5.9"
mlua = { version = "0.10.0", features = ["luau-jit"] }
thiserror = "2.0.9"
uzers = "0.12.1"
whoami = "1.5.2"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
